<resources>
    <string name="app_name">Settings Demo</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="not_defined">Not defined yet</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_title_role">Role</string>
    <string name="pref_title_prog_lang">Preferred programming language</string>
    <string name="pref_java">Java</string>
    <string name="pref_python">Python</string>
    <string name="pref_c">C</string>
    <string name="pref_title_night">Night mode</string>
    <string name="role_dev">Developer</string>
    <string name="role_test">Tester</string>
    <string name="role_qa">Quality Assurance</string>
    <string name="role_manager">Manager</string>
    <string name="role_other">Other</string>
</resources>